# homeschool-copilot

./: .gitignore  README.md
core/: Cargo.toml  build.rs
core/src/: main.rs
proto/: health.proto
ui/: .gitignore  README.md  package-lock.json
