[package]
name = "copilot-core"
version = "0.0.1"
edition = "2021"
license = "MIT-0"
build = "build.rs"

[dependencies]
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"
anyhow = "1.0"

[build-dependencies]
tonic-build = "0.11"

[features]
default = []
